--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,41 +6,11 @@ layout: default
   <h1 class="post-title">Report Cards</h1>
 
   <ul>
-    <li>
-      <a href="/report-cards/test-driven-development">Test-Driven Development</a>
-    </li>
-
-    <li>
-      <a href="/report-cards/templating">Templating</a>
-    </li>
-
-    <li>
-      <a href="/report-cards/routes-and-controllers">Routes &amp; Controllers</a>
-    </li>
-
-    <li>
-      <a href="/report-cards/performance">Performance</a>
-    </li>
-
-    <li>
-      <a href="/report-cards/active-record">ActiveRecord</a>
-    </li>
-
-    <li>
-      <a href="/report-cards/database-queries">Database Queries</a>
-    </li>
-
-    <li>
-      <a href="/report-cards/versioned-apis">Versioned APIs</a>
-    </li>
-
-    <li>
-      <a href="/report-cards/mailers-and-workers">Mailers &amp; Workers</a>
-    </li>
-
-    <li>
-      <a href="/report-cards/managing-environments">Managing Environments</a>
-    </li>
+    {% for report_card in page.report_cards %}
+      <li>
+        <a href="{{site.baseurl}}/report-cards/{{report_card.slug}}">{{report_card.title}}</a>
+      </li>
+    {% endfor %}
   </ul>
 </div>
 
